--- a/src/Enza_DEG_analysis.Rmd
+++ b/src/Enza_DEG_analysis.Rmd
@@ -7,137 +7,139 @@ output: html_notebook
 library(tidyverse)
 library(ggpubr)
 library(rstatix)
-
-?FindMarkers
-```
-
-
-#Enza compare
-
-```{r}
-
-bmet <- readRDS(file = "/Users/ds/Desktop/scRNA_datasets/He_scRNA/He_mCRPC.rds")
-Idents(bmet) <- "supercluster.for.LDSC.SEG"
-
-
-
-sc_deg <- FindMarkers(object =  bmet[row.names(bmet) %in% linc$gene.name,], group.by = "prior.enzalutamide",only.pos = F, ident.1 = "True", verbose = T)
-
-
-
-up <- sc_deg %>% arrange(-avg_log2FC)  %>% mutate(Genes = row.names(.))  %>% dplyr::filter(p_val_adj < 0.1 & avg_log2FC > 1) %>%  left_join( y = final_markers, by = c("Genes" = "gene"))%>% arrange(-avg_log2FC.x)
-down <- sc_deg %>% arrange(-avg_log2FC)  %>% mutate(Genes = row.names(.))  %>% dplyr::filter(p_val_adj < 0.1 & avg_log2FC < -1) %>%  left_join( y = final_markers, by = c("Genes" = "gene"))%>% arrange(-avg_log2FC.x)
-
-
-sc_deg
-```
-
-```{r}
-
-
-
-ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10)
-
-
-sc_deg <- sc_deg %>% mutate(Genes = row.names(.)) %>% left_join( y = final_markers, by = c("Genes" = "gene")) %>% mutate(Cluster = ifelse(is.na(cluster), "Unknown", cluster))
-sc_deg <- sc_deg %>% mutate(Alpha = ifelse(Cluster == "Unknown", 0.1, 1))
-
-write.csv(x = sc_deg, file = "/Users/ds/Desktop/Supplementary.Table3.csv",quote = F, row.names = F)
-
-
-plot <- ggplot(sc_deg, aes(x = avg_log2FC.x, y = -log10(p_val_adj.x), label = Genes) ) + geom_point(data = dplyr::filter(sc_deg, abs(avg_log2FC.x) > 1 & p_val_adj.x < 0.1), aes(color = Cluster)) + scale_color_manual(values = c("purple", "orange", "red", "black", "darkgreen", "navy", "grey")) + geom_hline(yintercept = -log10(0.1), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(sc_deg, abs(avg_log2FC.x) > 1 & p_val_adj.x < 0.1 ), force = 0.8) + xlab("avg_log2FC") + ylab("-log10(p_val_adj)") + ggtitle("lncRNAs associated with Enza treatment") + theme_classic()
-                                
-
+library(org.Hs.eg.db)
+library(GSVA)
+library(ComplexHeatmap)
 ```
 
 
 
 ```{r}
-all_gene_sets = msigdbr(species = "Homo sapiens")
+anno <- read.table("/Users/ds/Desktop/projects/data/anno/202009_deepRNAseq_sample_full.txt", header =T)
 
-gs <- all_gene_sets %>% dplyr::filter(gs_cat == "H")
+
+
+anno <- anno %>% dplyr::select(c(sample_id, wgs_id, biopsy_site, disease_type_SIG_GEX, ID_patient, AR,tumor_purity_rna)) 
+cf <- read.table("/Users/ds/Desktop/projects/BME_analysis/results/CIBERSORTx_Job33_Adjusted.txt", sep = "\t", header = T)
+cf$sample_id <- gsub("\\.", "-", cf$Mixture)
+row.names(cf) <- cf$Mixture
+
+cf <- inner_join(x = cf, y = anno, by  = c("sample_id" = "sample_id"))
+
+
+
+row.names(cf) <- cf$sample_id
+
+
+cf <- na.omit(cf)#Omit samples without WGS data
+
+
+cf$AR <- ifelse(cf$AR == 3, "Gain", "WT")
+
+
 ```
 
 
 ```{r}
-
-pathways <- gs$gs_name %>% unique()
-
-
-res <- do.call(rbind, lapply(pathways, FUN = function(p){
-  
-  print(p)
-  a <- bmet[c(up$Genes),] %>% GetAssayData() %>% colMeans()
-  b <- bmet[c(down$Genes),] %>% GetAssayData() %>% colMeans()
-  g <- gs %>% dplyr::filter(gs_name == p) %>% .$gene_symbol
-  c <- bmet[g,] %>% GetAssayData() %>% colMeans()
-  
-  df <- data.frame(Pathway = p, PCC.up = cor.test(a,c)$estimate, Pval.up = cor.test(a,c)$p.value, PCC.down = cor.test(b,c)$estimate, Pval.down = cor.test(b,c)$p.value)
-  return(df)
-}))
+#Limma DE analysis 
 
 
-res %>% arrange(-PCC.down)
-
-res.up <- arrange(res, -PCC.up)[1:5,c("Pathway", "PCC.up")]
-colnames(res.up) <- c("Pathway", "PCC")
-
-res.down <- arrange(res, -PCC.down)[1:5,c("Pathway", "PCC.down")]
-colnames(res.down) <- c("Pathway", "PCC")
-
-p <- rbind(res.up, mutate(res.down, PCC = PCC * -1)) %>% mutate(Group = ifelse(PCC > 0, "Upregulated", "Downregulated")) %>% ggplot(aes(y = reorder(Pathway, PCC), x = PCC, fill = Group)) + geom_col() + xlim(c(-1,1)) + scale_x_continuous(breaks = seq(-1,1,0.1),labels = seq(-1,1,0.1) %>% abs()) + ylab("Pathway") + scale_fill_manual(values = c("navy", "darkred"))
+#Read in raw counts, convert to matrix with rows as gene symbols, columns as samples
+counts <- read.table("/Users/ds/Desktop/projects/data/rna/mCRPC_RNA_counts_genename.txt", header = T)
 
 
-p
-#ggsave(filename = "/Users/ds/Desktop/plot.pdf", width = 10, plot = plot)
+
+
+counts <- counts[!duplicated(counts$Genename),]
+row.names(counts) <- counts$Genename
+counts <- counts[,-1] %>% as.matrix()
+colnames(counts) <- gsub("\\.", "-", colnames(counts))  
+
+#counts <- counts[row.names(counts) %in% linc$gene.name,]#Subset lncrna in hg38 
+
+
+#Keep matching sample ids of RNA-seq and WGS for cmp annotation
+ids <- intersect(colnames(counts),row.names(cf))
+counts <- counts[,ids]
+cf <- cf[ids,]
+
+
+
+#Create dge object - create counts matrix and sample anno df with library sizes
+x <- DGEList(counts = counts)
+
+#Add cluster variable to designate group membership to sample df
+x$samples <- cbind(x$samples, dplyr::select(cf, c( biopsy_site, disease_type_SIG_GEX, AR,tumor_purity_rna )))
+
+#Remove genes with low expression across samples
+keep.exprs <- filterByExpr(x, min.count = 5)
+x <- x[keep.exprs,, keep.lib.size = F]
+
+#Calculate effective library size using EdgeR TMM method
+x <- calcNormFactors(x, method = "TMM")
+
+#x <- x[row.names(x) %in% linc$gene.name,]#Subset lncrna in hg38 
+
+#x <- x[row.names(x) %in% pcg$gene.name,]#Subset pcg in hg38
+
+#Create design matrix (w/o intercept) specifying group membership
+design <- model.matrix(~ 0 + AR + tumor_purity_rna, data = cf) 
+
+
+colnames(design) <- c("Gain", "WT", "Purity") 
+
+# #Create contrasts to calculate
+contr.matrix <- makeContrasts(Gain - WT, levels = colnames(design))
+
+
+#Normalize counts to log CPM using voom
+v <- voom(x, design = design)
+
+#Fit LM according to design
+vfit <- lmFit(v, design)
+
+#Calculate contrasts i.e logFC for genes across groups
+vfit <- contrasts.fit(vfit, contrasts=contr.matrix)
+
+#Calculate t-stats and p vals using Emp bayes method
+efit <- eBayes(vfit)
+
+
+#Get list of all genes, arrange in decreasing order
+bulk_deg <- topTable(efit, number = Inf, coef = 1) %>% data.frame(Genes = row.names(.))  %>% arrange(-logFC) 
+
+
+bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = final_markers, by = c("Genes" = "gene"))
+
+
+bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = pcg_markers, by = c("Genes" = "gene"))
+
+ar_lncrna <- bulk_deg %>% dplyr::filter(logFC > 0 & cluster == 'tumor') %>% .$Genes
+
+bulk_deg %>% dplyr::filter(logFC > 0 & Genes %in% linc$gene.name)
+ar_lncrna
 ```
 
 ```{r}
-res <- do.call(rbind, lapply(pathways, FUN = function(p){
-  
-  print(p)
-  a <- tumor[c(up$Genes),] %>% GetAssayData() %>% colMeans()
-  b <- tumor[c(down$Genes),] %>% GetAssayData() %>% colMeans()
-  g <- gs %>% dplyr::filter(gs_name == p) %>% .$gene_symbol
-  c <- tumor[g,] %>% GetAssayData() %>% colMeans()
-  
-  df <- data.frame(Pathway = p, PCC.up = cor.test(a,c)$estimate, Pval.up = cor.test(a,c)$p.value, PCC.down = cor.test(b,c)$estimate, Pval.down = cor.test(b,c)$p.value)
-  return(df)
-}))
+
+
+bulk_deg$cluster <- bulk_deg$cluster %>% as.character()
+bulk_deg <- bulk_deg %>% mutate(Cluster = ifelse(is.na(cluster), "Unknown", cluster)) %>% mutate(Alpha = ifelse(Cluster == "Unknown", 0.8, 1))
+
+
+plot <- ggplot(bulk_deg, aes(x = logFC, y = -log10(adj.P.Val), color = Cluster, alpha = Alpha, label = Genes) ) + geom_point() + scale_color_manual(values = c("purple", "orange", "red", "pink", "darkgreen","navy" , "black")) + geom_hline(yintercept = -log10(0.25), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(bulk_deg, abs(logFC) > 1 &adj.P.Val < 0.25 ), force = 0.8, size = 2.5) + ggtitle(label = "Protein-coding genes associated with AR gain") + theme_classic()
+
+plot
+
+ggsave(plot = plot, filename = "/Users/ds/Desktop/plot.pdf", width = 10)
+
+write.csv(x = bulk_deg, file = "/Users/ds/Desktop/Supplementary.Table4.csv",quote = F, row.names = F)
 
 ```
 
 
 
 
-
-
-
-
-
-
-```{r}
-
-query <- mcrpc_rna[, colnames(mcrpc_rna) %in% dplyr::filter(gs, gs_name == "HALLMARK_COMPLEMENT")$gene_symbol, drop = F] %>% rowMeans()      
-
-df <-  mcrpc_rna[,colnames(mcrpc_rna) %in% up$Genes, drop = F] 
-#df <- df[,colMeans(df) >0]
-p1 <- data.frame(GEX = rowMeans(df), GS = query) %>% ggplot(aes(x = GEX, y = GS)) + geom_point() + geom_smooth(method = 'lm') + stat_cor() + theme_classic() + ylab("HALLMARK_COMPLEMENT") + xlab("Enza lncRNA Upregulated")
-
-
-query <- mcrpc_rna[, colnames(mcrpc_rna) %in% dplyr::filter(gs, gs_name == "HALLMARK_ANDROGEN_RESPONSE")$gene_symbol, drop = F] %>% rowMeans()      
-
-df <-  mcrpc_rna[,colnames(mcrpc_rna) %in% down$Genes, drop = F] 
-
-
-df <- df[,colMeans(df) >0]
-p2 <- data.frame(GEX = rowMeans(df), GS = query) %>% ggplot(aes(x = GEX, y = GS)) + geom_point() + geom_smooth(method = 'lm') + stat_cor()  + theme_classic() + ylab("HALLMARK_ANDROGEN_RESPONSE") + xlab("Enza lncRNA Downregulated")
-
-pdf("/Users/ds/Desktop/plot.pdf", width = 10)
-p1 + p2
-dev.off()
-
-```
 
 
 ```{r}
@@ -146,78 +148,144 @@ colnames(lcm)[1] <- "Gene"
 
 meta <- read_csv(file = "/Users/ds/Desktop/projects/data/anno/LCM_enza_WCDT_meta.csv", col_names = c("Patient.ID", "Timepoint", "Biopsy.site", "Same.lesion", "PSA", "TOS", "AR.VIPER", "AR.GEX", "Aggarwal", "Labrecque" ))
 
+lcm <- data.frame(lcm)
+
+lcm <- lcm[!duplicated(lcm$Gene),]
+row.names(lcm) <- lcm$Gene
+lcm <- lcm[,-1]
+lcm <- as.matrix(lcm) %>% log1p()
+
+
+gsva.es <- gsva(lcm, gset.idx.list = list(ar_lncrna), method = 'zscore')
+
+
 
 ```
 
 
+
+
+
+
 ```{r}
-querygenes <- list(Andr = gs[grepl(pattern = "ANDROGEN", x = gs$gs_name),"gene_symbol", drop = T], Inflamm = gs[grepl(pattern = "INFLAMMATORY", x = gs$gs_name),"gene_symbol", drop = T])
 
-a <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(up$Genes)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
-b <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(down$Genes)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
-c <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(querygenes$Andr)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
-d <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(querygenes$Inflamm)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
 
-df <- data.frame(Patient.ID = names(a), Enza_up = a, Enza_down = b, Andr = c, Inflamm = d) %>% merge(meta)
+
+df <- gsva.es %>% t() %>% data.frame(Patient.ID = row.names(.), Pca.lncrna = .) %>% merge(meta)
+
+
 
 row.names(df) <- df$Patient.ID
 df$AR.GEX <- as.numeric(df$AR.GEX)
 df$AR.VIPER <- as.numeric(df$AR.VIPER)
 
 
-column_ha = HeatmapAnnotation( PSA = df$PSA, AR.GEX = df$AR.GEX, AR.VIPER = df$AR.VIPER, Aggarwal.cluster = df$Aggarwal, Labrecque.cluster = df$Labrecque)
 
-mat <- dplyr::select(df, c(Enza_up, Enza_down)) %>% scale() %>% t()
-mat <- ramify::clip(mat, .min = -2, .max = 2)
+# Create a box plot
+p1 <- ggboxplot(
+  dplyr::filter(df, PSA != "Unknown"), x = "Timepoint", y = "Pca.lncrna", fill = "darkred", alpha = 0.5,
+  facet.by = "PSA", draw_quantiles = 0.5, add = 'jitter')+ stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR upregulated Pca-protein coding genes")
 
-pdf("/Users/ds/Desktop/plot.pdf", height = 5, width = 10)
-Heatmap(matrix = mat, show_column_names = T, col  = colorRampPalette(c('navy',"white", "red"))(10), top_annotation = column_ha, cluster_columns = F, name = "Z score", column_names_gp = gpar(fontsize = 5), height = unit(2, 'cm'))
+p1
+
+
+```
+
+
+```{r}
+
+
+p1 <- df %>% dplyr::select(c(Pca.lncrna,AR.VIPER, AR.GEX)) %>% gather(key = "Signature", value = "GEX", -Pca.lncrna) %>% ggplot(aes(x = Pca.lncrna, y = GEX, color = Signature)) %>% facet(facet.by = "Signature") + geom_point() + geom_smooth(method = "lm") + stat_cor() + scale_color_manual(values = c("navy", "darkred")) + theme_classic() + xlab("AR upregulated Pca-lncRNAs")
+
+pdf("/Users/ds/Desktop/plot.pdf", width = 10)
+p1
 dev.off()
+
+
+```
+
+
+```{r}
+
+a <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(ar_lncrna)) 
+row.names(a) <- a$Gene
+
+a <- a %>% dplyr::select(-Gene) %>% log1p() 
+
+df <- data.frame(Patient.ID = colnames(a), t(a)) %>% merge(meta)
+row.names(df) <- df$Patient.ID
+df$AR.GEX <- as.numeric(df$AR.GEX)
+df$AR.VIPER <- as.numeric(df$AR.VIPER)
+
+df$Sample <- gsub(pattern = "DTB|_[0-9]*", replacement = "", x = df$Patient.ID)
+
+
+row_ha = HeatmapAnnotation( PSA = df$PSA, AR.GEX = df$AR.GEX, AR.VIPER = df$AR.VIPER, Aggarwal.cluster = df$Aggarwal, Labrecque.cluster = df$Labrecque, Sample = df$Sample)
+
+
+mat <- df[,colnames(df) %in% ar_lncrna] %>% scale() %>% t()
+
+
+mat <- ramify::clip(mat, .min = -2, .max = 2)
+pdf("/Users/ds/Desktop/plot.pdf", height = 10, width = 10)
+Heatmap(matrix = mat, show_column_names = F, col  = colorRampPalette(c('navy',"white", "red"))(10), top_annotation  = row_ha, cluster_columns = T, name = "Z score", column_names_gp = gpar(fontsize = 10), height = unit(5, 'cm'), cluster_rows = F)
+dev.off()
+
+
+```
+
+
+```{r}
+p1 <- dplyr::filter(df,grepl(pattern ="DTB_080|DTB_135|DTB_210", x = Patient.ID)) %>% mutate(Group = "Converters") %>% ggboxplot( , x = "Timepoint", y = "AR.VIPER", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , facet.by = "Group", width = 0.5) + stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR upregulated Pca-lncRNAs")
+p1
+
 ```
 
 ```{r}
 
-stat.test <- dplyr::filter(df, PSA != "Unknown") %>%
-  group_by(PSA) %>%
-  t_test(Enza_down ~ Timepoint, paired = T) %>%
-  adjust_pvalue(method = "BH") %>%
-  add_significance()
 
-# Create a box plot
-p1 <- ggviolin(
-  dplyr::filter(df, PSA != "Unknown"), x = "Timepoint", y = "Enza_down", fill = "darkred", alpha = 0.5,
-  facet.by = "PSA", draw_quantiles = 0.5)
-
-# Make facet and add p-values
-stat.test <- stat.test %>% add_xy_position(x = "Timepoint")
-p1 <- p1 + stat_pvalue_manual(stat.test, label = 'p.adj')
-
-stat.test
-p1
-
-stat.test <- dplyr::filter(df, PSA != "Unknown") %>%
-  group_by(PSA) %>%
-  t_test(Enza_up ~ Timepoint, paired = T) %>%
-  adjust_pvalue(method = "BH") %>%
-  add_significance()
-
-# Create a box plot
-p2 <- ggviolin(
-  dplyr::filter(df, PSA != "Unknown"), x = "Timepoint", y = "Enza_up", fill = "navy", alpha = 0.5,
-  facet.by = "PSA", draw_quantiles = 0.5
-  )
-
-# Make facet and add p-values
-stat.test <- stat.test %>% add_xy_position(x = "Timepoint")
-p2 <- p2 + stat_pvalue_manual(stat.test, label = 'p.adj')
-stat.test
-plot <- p1 + p2
-plot
+mcrpc_rna <- read.table(file = "/Users/ds/Desktop/projects/data/rna/mCRPC_RNA_counts_genename.txt", header = T)
+mcrpc_rna <- mcrpc_rna[!duplicated(mcrpc_rna$Genename),]
 
 
 
+
+row.names(mcrpc_rna) <- mcrpc_rna$Genename
+mcrpc_rna <- mcrpc_rna[,-1]
+keep.exprs <- filterByExpr(as.matrix(mcrpc_rna),min.count = 5 )
+
+
+
+
+mcrpc_rna <- mcrpc_rna[keep.exprs,]
+mcrpc_rna <- edgeR::cpm(mcrpc_rna, log = T) %>% t() %>% data.frame()#Log normalize for heatmap
+#mcrpc_rna <- mcrpc_rna %>% t() %>% data.frame()#Counts for DEG analysis
+row.names(mcrpc_rna) <- gsub("\\.", "-",  x = row.names(mcrpc_rna))
+mcrpc_rna <- mcrpc_rna %>% mutate(cases = row.names(.), batch = "mCRPC")
+
+
+
+anno <- read.table("/Users/ds/Desktop/projects/data/anno/202009_deepRNAseq_sample_full.txt", header =T)
+
+
+
+anno <- anno %>% dplyr::select(c(sample_id, wgs_id, biopsy_site, disease_type_SIG_GEX, ID_patient,tumor_purity_rna, AR ))
 ```
 
+```{r}
 
 
+Pca.lncrna <- mcrpc_rna[, colnames(mcrpc_rna) %in% c(pca_lncrna)] %>% rowMeans()
+Androgen.Response.Hallmark <- mcrpc_rna[, colnames(mcrpc_rna) %in% dplyr::filter(gs, gs_name == "HALLMARK_ANDROGEN_RESPONSE")$gene_symbol] %>% rowMeans()
+
+df <- data.frame(sample_id = names(Pca.lncrna), Androgen.Response.Hallmark = Androgen.Response.Hallmark, Pca.lncrna = Pca.lncrna) %>% merge(anno) 
+
+df <- df %>% mutate(AR = ifelse(AR == 3, "Gain", "WT"))
+
+df
+
+p <- na.omit(df) %>% ggboxplot( x = "AR", y = "Pca.lncrna", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , width = 0.5) + stat_compare_means(paired = F, method = 't.test', label.x.npc = 0.5) + ylab("Prostate lncRNAs") + xlab("AR mutational status")
+
+p
+```
 
