--- a/src/Metsite_analysis.Rmd
+++ b/src/Metsite_analysis.Rmd
@@ -11,7 +11,11 @@ library(EnsDb.Hsapiens.v86)
 library(BSgenome.Hsapiens.UCSC.hg38)
 library(pROC)
 library(edgeR)
+library(Signac)
 ```
+
+
+
 
 ```{r}
 bmet <- readRDS(file = "/Users/ds/Desktop/scRNA_datasets/He_scRNA/He_mCRPC.rds")
@@ -24,13 +28,12 @@ sc_deg <- FindMarkers(object = bmet[row.names(bmet) %in% linc$gene.name,], ident
 
 sc_deg <-  sc_deg %>% dplyr::filter(abs(avg_log2FC) > 1 & p_val_adj < 0.1)  %>% mutate(Genes = row.names(.)) %>%  left_join( y = final_markers, by = c("Genes" = "gene")) %>% arrange(avg_log2FC.x)
 
-write.csv(x = sc_deg, file = "/Users/ds/Desktop/Supplementary.Table4.csv",quote = F, row.names = F)
+#write.csv(x = sc_deg, file = "/Users/ds/Desktop/Supplementary.Table5.csv",quote = F, row.names = F)
 
 Idents(bmet) <- "supercluster.for.LDSC.SEG"
 
 #DotPlot(object = subset(bmet,organ__ontology_label == 'liver' ), features = c("SSTR5-AS1", "LINC00617", "H19", "LINC00514", "FENDRR"))
 
-sc_deg %>% dplyr::filter(Genes == "RMST")
 ```
 
 ```{r}
@@ -51,7 +54,6 @@ mcrpc_rna <- mcrpc_rna[keep.exprs,]
 mcrpc_rna <- edgeR::cpm(mcrpc_rna, log = T) %>% t() %>% data.frame()#Log normalize for heatmap
 #mcrpc_rna <- mcrpc_rna %>% t() %>% data.frame()#Counts for DEG analysis
 row.names(mcrpc_rna) <- gsub("\\.", "-",  x = row.names(mcrpc_rna))
-mcrpc_rna <- mcrpc_rna %>% mutate(cases = row.names(.), batch = "mCRPC")
 
 
 
@@ -81,18 +83,21 @@ row.names(cf) <- cf$sample_id
 
 ```{r}
 
-
-anno <- cf[!duplicated(cf$wgs_id),] %>% na.omit()
-row.names(anno) <- anno$wgs_id
-anno <- anno %>% dplyr::select(disease_type_SIG_GEX) %>% mutate(Histology = disease_type_SIG_GEX) %>% dplyr::select(Histology)
+meta <- read_csv(file = "/Users/ds/Desktop/projects/data/anno/Nat_Gen_sampleanno.csv") %>% data.frame()
+row.names(meta) <- meta$Sample
 
 
+meta <- meta %>% dplyr::select(Type) %>% mutate(Histology = Type) %>% dplyr::select(Histology)
+row.names(meta)[meta$Histology == "tSCNC"]
+meta
+# anno <- cf[!duplicated(cf$wgs_id),] %>% na.omit()
+# row.names(anno) <- anno$wgs_id
+# anno <- anno %>% dplyr::select(disease_type_SIG_GEX) %>% mutate(Histology = disease_type_SIG_GEX) %>% dplyr::select(Histology)
+# 
+meta
 
-saveRDS(object = anno, file = "/Users/ds/Desktop/projects/lncRNA/data//Histo_mCRPC_WGBS_anno.rds")
+saveRDS(object = meta, file = "/Users/ds/Desktop/projects/lncRNA/data//Histo_mCRPC_WGBS_anno.rds")
 
-
-anno
-cf[!duplicated(cf$wgs_id),] %>% na.omit() %>% .$disease_type_SIG_GEX %>% table()
 ```
 
 
@@ -111,6 +116,8 @@ liver <- subset(bmet,organ__ontology_label == 'liver' )
 
 sc_sig <- dplyr::filter(sc_deg,avg_log2FC.x<0 )$Genes
 adeno_sig <- dplyr::filter(sc_deg,avg_log2FC.x>0 )$Genes
+
+
 sc_sig
 ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10)
 Idents(liver)  <- "supercluster.for.LDSC.SEG"
@@ -169,28 +176,31 @@ gs <- all_gene_sets %>% dplyr::filter(gs_cat == "H")
 ```{r}
 pathways <- gs$gs_name %>% unique()
 
+Idents(bmet) <- "biosample_id"
+
+mat =  AverageExpression(object = bmet)
+
 
 
 res <- do.call(rbind, lapply(pathways, FUN = function(p){
   
   print(p)
-  a <- bmet[c(sc_sig),] %>% GetAssayData() %>% colMeans()
-  b <- bmet[c(adeno_sig),] %>% GetAssayData() %>% colMeans()
   g <- gs %>% dplyr::filter(gs_name == p) %>% .$gene_symbol
-  c <- bmet[g,] %>% GetAssayData() %>% colMeans()
-  
-  df <- data.frame(Pathway = p, PCC.up = cor.test(a,c)$estimate, Pval.up = cor.test(a,c)$p.value, PCC.down = cor.test(b,c)$estimate, Pval.down = cor.test(b,c)$p.value)
+  df <- mat$RNA %>% gsva( gset.idx.list = list(A = sc_sig, B = adeno_sig, C = g), method = 'zscore') %>% t() %>% data.frame()
+  df <- data.frame(Pathway = p, PCC.up = cor.test(df$A,df$C)$estimate, Pval.up = cor.test(df$A,df$C)$p.value, PCC.down = cor.test(df$B,df$C)$estimate, Pval.down = cor.test(df$B, df$C)$p.value)
   return(df)
 }))
 
 
-res %>% arrange(-PCC.down)
 
 
-res.up <- arrange(res, -PCC.up)[1:5,c("Pathway", "PCC.up")]
+res %>% arrange(-PCC.up)
+
+
+res.up <- arrange(res, -PCC.up)[1:10,c("Pathway", "PCC.up")]
 colnames(res.up) <- c("Pathway", "PCC")
 
-res.down <- arrange(res, -PCC.down)[1:5,c("Pathway", "PCC.down")]
+res.down <- arrange(res, -PCC.down)[1:10,c("Pathway", "PCC.down")]
 colnames(res.down) <- c("Pathway", "PCC")
 
 p <- rbind(res.up, mutate(res.down, PCC = PCC * -1)) %>% mutate(Group = ifelse(PCC > 0, "Small cell", "Adeno")) %>% ggplot(aes(y = reorder(Pathway, PCC), x = PCC, fill = Group)) + geom_col() + xlim(c(-1,1)) + scale_x_continuous(breaks = seq(-1,1,0.1),labels = seq(-1,1,0.1) %>% abs()) + ylab("Pathway") + scale_fill_manual(values = c("navy", "darkred")) + theme_classic()
@@ -206,7 +216,6 @@ ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = p, width = 10)
 
 
 ```{r}
-
 dss <- read_tsv(file = "/Users/ds/Desktop/projects/lncRNA/results/all.dmr.Histo.format.bed", col_names = c("chrom", "start", "end", "Diff", "Stat"))
 
 dss <- GRanges(dss)
@@ -224,18 +233,52 @@ plot <- dplyr::filter(dss, Signature %in% c("SC signature","Adeno signature")) %
 pdf("/Users/ds/Desktop/plot.pdf", width = 10)
 plot
 dev.off()
+```
+
+
+```{r}
+hmr <- read_table(file = "/Users/ds/Desktop/projects/data/bs/all.mcrpc.hmr.txt")
+meta <- meta %>% mutate(wgs_id = row.names(.))
+
+regions <- GRanges(linc)
+
+
+coord <- hmr$Coord %>% gsub(pattern = "\\.", replacement = "-") %>% StringToGRanges(sep = c("-", "-"))
+
+coord <- data.frame(linc, coord[nearest(x =  GRanges(regions), subject = coord),] ) %>% mutate(Signature = ifelse(gene.name %in% sc_sig, "SC signature", ifelse(gene.name %in% adeno_sig, "Adeno signature", "Other")))
+                                                                                                 
+                                                                                               
+
+
+sc_coord <- coord %>% dplyr::filter(Signature == "SC signature") %>% dplyr::select(c(seqnames, start.1, end)) %>% mutate(coord = paste0(seqnames, ".", start.1, ".", end)) %>% .$coord
+ad_coord <- coord %>% dplyr::filter(Signature == "Adeno signature") %>% dplyr::select(c(seqnames, start.1, end)) %>% mutate(coord = paste0(seqnames, ".", start.1, ".", end)) %>% .$coord
+
+
+
+
+a <- hmr %>% dplyr::filter(Coord %in% sc_coord) %>% dplyr::select(-Coord) %>% colMeans() %>% data.frame(Dnam = ., wgs_id = gsub("\\.", replacement = "-", names(.))) %>% mutate(Group = "SCNC lncRNAs")
+b <- hmr %>% dplyr::filter(Coord %in% ad_coord) %>% dplyr::select(-Coord) %>% colMeans() %>% data.frame(Dnam = ., wgs_id = gsub("\\.", replacement = "-", names(.))) %>% mutate(Group = "Adeno lncRNAs")
+
+
+p <- rbind(a,b) %>% merge(meta) %>% mutate(Histology = ifelse(Histology == "tSCNC", "SCNC", "Adeno")) %>% ggboxplot(x = "Histology", y = "Dnam", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter",width = 0.5, facet.by = "Group") + stat_compare_means(paired = F, method = 't.test', label.x.npc = 0.5) + ylab("Prostate lncRNAs")
+nepc
+
 
 
 ```
 
 
 ```{r}
-nepc_lnc <- read_csv(file = "/Users/ds/Desktop/beltran_nepc_lnc.csv", col_names = T, skip = 1)
+
+
+
+
+nepc_lnc <- read_csv(file = "/Users/ds/Desktop/Supplement/beltran_nepc_lnc.csv", col_names = T, skip = 1)
 nepc_lnc <- nepc_lnc %>% dplyr::filter(`NEPC (n=122)` == 1)
-#nepc_lnc <- nepc_lnc %>% dplyr::filter(`NEtD (n=742)` == 1)
+
+nepc <- read_csv(file = "/Users/ds/Desktop/Supplement/nepc_genes.csv",col_names = T)
 
 
-nepc <- read_csv(file = "/Users/ds/Desktop/nepc_genes.csv",col_names = T)
 
 
 Beltran <- mcrpc_rna[, colnames(mcrpc_rna) %in% nepc$`HGNC ID`] %>% rowMeans()
@@ -254,9 +297,41 @@ p <- mets %>% dplyr::select(c(Beltran.et.al, Ramnarine.et.al, Single.cell)) %>% 
 pdf("/Users/ds/Desktop/plot.pdf", width = 10)
 p
 dev.off()
-mets %>% dplyr::select(c(Beltran.et.al, Ramnarine.et.al, Single.cell,Hedgehog)) %>% gather(key = "Signature" , value = "GEX", -Hedgehog ) %>% ggplot(aes(x = GEX, y = Hedgehog, color = Signature))  %>% facet(facet.by = "Signature") + geom_point() + geom_smooth(method = 'lm') + stat_cor() + scale_color_manual(values = c("navy", 'darkred', 'darkgreen')) + theme_classic()
+
+
 
 ```
+
+```{r}
+
+nepc_lnc <- read_csv(file = "/Users/ds/Desktop/Supplement/beltran_nepc_lnc.csv", col_names = T, skip = 1)
+nepc_lnc <- nepc_lnc %>% dplyr::filter(`NEPC (n=122)` == 1)
+
+
+nepc <- read_csv(file = "/Users/ds/Desktop/Supplement/nepc_genes.csv",col_names = T)
+
+Beltran =  gsva(t(mcrpc_rna), gset.idx.list = list(c(nepc$`HGNC ID`)), method = 'zscore')
+Ramnarine =  gsva(t(mcrpc_rna), gset.idx.list = list(unique(nepc_lnc$lncRNA)), method = 'zscore')
+Single_cell = gsva(t(mcrpc_rna), gset.idx.list = list(c(sc_sig, adeno_sig)), method = 'zscore')
+SHH = gsva(t(mcrpc_rna), gset.idx.list = list(dplyr::filter(gs, gs_name == "HALLMARK_HEDGEHOG_SIGNALING")$gene_symbol), method = 'zscore')
+
+
+df <- data.frame(sample_id = colnames(Beltran), Beltran.et.al = t(Beltran), Ramnarine.et.al = t(Ramnarine), Single.cell = t(Single_cell), SHH = t(SHH)) %>% merge(anno) 
+
+
+
+mets <- df  %>% mutate(Histology = disease_type_SIG_GEX) %>% dplyr::select(c(sample_id, Beltran.et.al,Ramnarine.et.al, Single.cell, Histology )) 
+
+
+p <- mets %>% dplyr::select(c(Beltran.et.al, Ramnarine.et.al, Single.cell)) %>% gather(key = "Signature" , value = "GEX", -Beltran.et.al ) %>% ggplot(aes(x = GEX, y = Beltran.et.al, color = Signature))  %>% facet(facet.by = "Signature") + geom_point() + geom_smooth(method = 'lm') + stat_cor() + scale_color_manual(values = c("navy", 'darkred')) + theme_classic()
+
+pdf("/Users/ds/Desktop/plot.pdf", width = 10)
+p
+dev.off()
+
+
+```
+
 
 
 
@@ -266,8 +341,8 @@ predictions <- mets$Ramnarine.et.al
 labels <- mets$Histology
 
 #define object to plot and calculate AUC
-rocobj1 <- roc(labels, predictions, direction = ">")
-auc1 <- round(auc(labels, predictions, direction = ">"),2)
+rocobj1 <- roc(labels, predictions, direction = "<")
+auc1 <- round(auc(labels, predictions, direction = "<"),2)
 
 predictions <- mets$Single.cell
 
@@ -283,9 +358,9 @@ auc3 <- round(auc(labels, predictions, direction = ">"),2)
 
 #create ROC plot
 p <- ggroc(list(Ramnarine.et.al = rocobj1, Single.cell = rocobj2 ), size = 1)+ scale_color_manual(values = c("navy", "darkred", "darkgreen"), name = "Signature", labels = c(paste0("Ramnarine AUC= ", auc1), paste0("Single cell AUC=", auc2), paste0("Beltran AUC=", auc3)) ) + theme_classic() + ggtitle('AUC analysis of 71 CRPC-adeno and 3 CRPC-small cell')
- p
+p
 
-mets %>% gather(key = "Sig", value = "Score", -c(sample_id, Histology, Hedgehog)) %>% ggplot(aes(x = Histology, y = Score, fill = Sig)) + geom_boxplot()
+
 
 
 ```
@@ -304,7 +379,7 @@ DotPlot(object = bmet, features = c("H19", "LINC00514", "LINC00617", "SSTR5-AS1"
 bmet$organ__ontology_label
 mcrpc_rna
 
-DotPlot(object = bmet, features = c("PCA3"))
+DotPlot(object = bmet, features = c("HOTAIR"))
 
 sc_deg
 sc_sig[sc_sig == "SSTR5-AS1"]
@@ -327,5 +402,7 @@ DotPlot(object = bmet, features = c("PCA3", "PCAT1", "PCAT29", "PCGEM1", "PRNCR1
 
 
 ```
+
+
 
 
