--- a/src/scratch.Rmd
+++ b/src/scratch.Rmd
@@ -5,6 +5,7 @@ output: html_notebook
 
 #Format PRAD count data
 ```{r}
+
 prad_meta<- mrna_query$results[[1]] %>% dplyr::filter(sample_type == "Primary Tumor")
 
 prad_rna <- read.table(file = "/Users/ds/Desktop/projects/TCGA/TCGA-PRAD-Tumor/prad_rna_counts.txt", header = T)
@@ -47,11 +48,54 @@ prad_rna <- inner_join(prad_rna, anno_prad, by = c("cases.submitter_id" = "PATIE
 
 ```{r}
 
-prad_anno <- read_tsv(file = "/Users/ds/Desktop/prad_tcga_clinical_data (1).tsv")
+prad_anno <- read_tsv(file = "/Users/ds/Desktop/prad_tcga_clinical_data.tsv")
 
 #prad_anno <- dplyr::select(prad_anno, c("Patient ID", "Disease Free (Months)", "Disease Free Status", "Overall Survival (Months)", "Overall Survival Status"))
+prad_anno
 
-bulk_deg %>% dplyr::filter(Genes %in% c("SCHLAP1", "PCAT14"))
+```
+
+```{r}
+
+mcrpc_rna <- read.table(file = "/Users/ds/Desktop/projects/data/rna/2018_04_15_matrix_rna_counts.txt", header = T)
+mcrpc_rna <- mcrpc_rna[!duplicated(mcrpc_rna$symbol),]
+
+mcrpc_rna
+
+
+row.names(mcrpc_rna) <- mcrpc_rna$symbol
+mcrpc_rna <- mcrpc_rna[,-1]
+keep.exprs <- filterByExpr(as.matrix(mcrpc_rna),min.count = 5 )
+
+
+
+
+mcrpc_rna <- mcrpc_rna[keep.exprs,]
+mcrpc_rna <- edgeR::cpm(mcrpc_rna, log = T) %>% t() %>% data.frame()#Log normalize for heatmap
+#mcrpc_rna <- mcrpc_rna %>% t() %>% data.frame()#Counts for DEG analysis
+row.names(mcrpc_rna) <- gsub("\\.", "-",  x = row.names(mcrpc_rna))
+mcrpc_rna <- mcrpc_rna %>% mutate(cases = row.names(.), batch = "mCRPC")
+
+
+
+
+```
+
+
+
+```{r}
+
+
+gex <- data.frame(Gex =rowMeans(prad_rna[,colnames(prad_rna) %in% sig.up, drop = F]) , sample_id  = prad_rna$cases.submitter_id) %>% inner_join(prad_anno, by = c("sample_id" = "Patient ID"))
+gex$`Disease Free Status` <-  gex$`Disease Free Status` %>% gsub(pattern = ":.*", replacement = "") %>% as.numeric()
+gex$`Overall Survival Status` <- gex$`Overall Survival Status` %>% gsub(pattern = ":.*", replacement = "") %>% as.numeric()
+gex$Group <- as.factor(ntile(gex$Gex, 2))
+
+coxph(Surv(time = `Disease Free (Months)`, event = `Disease Free Status`)~ Group , data = gex) %>% ggforest()
+
+coxph(Surv(time = `Overall Survival (Months)`, event = `Overall Survival Status`)~ Group , data = gex) %>% ggforest()
+
+
 
 ```
 
@@ -59,21 +103,16 @@ bulk_deg %>% dplyr::filter(Genes %in% c("SCHLAP1", "PCAT14"))
 
 
 
-gex <- data.frame(Gex =rowMeans(prad_rna[,colnames(prad_rna) %in% "SCHLAP1", drop = F]) , sample_id  = prad_rna$cases.submitter_id) %>% inner_join(prad_anno, by = c("sample_id" = "Patient ID"))
-gex$`Disease Free Status` <-  gex$`Disease Free Status` %>% gsub(pattern = ":.*", replacement = "") %>% as.numeric()
+df <- mcrpc_rna[,colnames(mcrpc_rna) %in% c(tumor.down) , drop = F] %>% rowMeans() %>% data.frame(sample_id = names(.), GEX = .) 
+df <- df %>% mutate(ID_patient = gsub(pattern = "-BL|-PRO|-PRO2", replacement = "", x = sample_id))  %>% inner_join(y = clin, by = c("ID_patient" = "Patient.ID"))
 
-gex$`Disease Free Status` <-  gex$`Disease Free Status` %>% gsub(pattern = ":.*", replacement = "") %>% as.numeric()
-gex$`Overall Survival Status` <- gex$`Overall Survival Status` %>% gsub(pattern = ":.*", replacement = "") %>% as.numeric()
-gex$Group <- ntile(x = gex$Gex, n = 2) %>% as.factor()
+p1 <- coxph(Surv(time =OS.mCRPC , event = Event)~ GEX, data = df) %>% ggforest()
+
+p2 <- coxph(Surv(time =OS.mCRPC , event = Event)~ GEX  +ECOG.PS + PSA.At.Biopsy+ LDH.at.biopsy + ALP + Hemoglobin.at.biopsy + Disease.Site + Enzalutamide.resistant  , data = df) %>% ggforest() 
 
 
-coxph(Surv(time = `Disease Free (Months)`, event = `Disease Free Status`)~ Group , data = gex) %>% ggforest()
 
-coxph(Surv(time = `Overall Survival (Months)`, event = `Overall Survival Status`)~ Group , data = gex) %>% ggforest()
-
-gex$
 ```
-
 
 ```{r}
 ggplot(gex, aes(x= Gex)) + geom_density()
